Add an --add-opens argument to the surefire invocation to support JAI in Java 16+